# datasafari

./: .bandit  .bumpversion.cfg  .editorconfig  .gitignore  .readthedocs.yaml  .safety-policy.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY  HISTORY.md  HISTORY.rst  LICENSE  MANIFEST.in  Makefile  README.md  dev-requirements.txt  explore_df.py  htaccess-backup.txt  pyproject.toml  requirements.txt  safety_policy.yml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: python-package.yml
datasafari/: __init__.py
datasafari/evaluator/: __init__.py  evaluate_contingency_table.py  evaluate_dtype.py  evaluate_normality.py  evaluate_variance.py
datasafari/explorer/: __init__.py  explore_cat.py  explore_df.py  explore_num.py
datasafari/predictor/: __init__.py  predict_hypothesis.py  predict_ml.py
datasafari/transformer/: __init__.py  transform_cat.py  transform_num.py
datasafari/utils/: __init__.py  calculators.py  filters.py
docs/: Makefile  conf.py  contact.rst  datasafari.evaluator.evaluate_contingency_table.rst  datasafari.evaluator.evaluate_dtype.rst  datasafari.evaluator.evaluate_normality.rst  datasafari.evaluator.evaluate_variance.rst  datasafari.evaluator.rst  datasafari.explorer.explore_cat.rst  datasafari.explorer.explore_df.rst  datasafari.explorer.explore_num.rst  datasafari.explorer.rst  datasafari.predictor.predict_hypothesis.rst  datasafari.predictor.predict_ml.rst  datasafari.predictor.rst  datasafari.rst  datasafari.transformer.rst  datasafari.transformer.transform_cat.rst  datasafari.transformer.transform_num.rst  datasafari.utils.rst  explorer.explore_df.rst  glance.rst  index.rst  installation.rst  license.rst  make.bat  modules.rst  start.rst  usage.rst
docs/_build/doctrees/: contact.doctree  datasafari.evaluator.evaluate_contingency_table.doctree  datasafari.evaluator.evaluate_dtype.doctree  datasafari.evaluator.evaluate_normality.doctree  datasafari.evaluator.evaluate_variance.doctree  datasafari.explorer.explore_cat.doctree  datasafari.explorer.explore_df.doctree  datasafari.explorer.explore_num.doctree  datasafari.predictor.predict_hypothesis.doctree  datasafari.predictor.predict_ml.doctree  datasafari.transformer.transform_cat.doctree  datasafari.transformer.transform_num.doctree  environment.pickle  glance.doctree  index.doctree  installation.doctree  lic-gpl3.doctree  start.doctree
docs/_build/doctrees/evaluators/: evaluate_contingency_table.doctree  evaluate_dtype.doctree  evaluate_normality.doctree  evaluate_variance.doctree
docs/_build/doctrees/explorers/: explore_cat.doctree  explore_df.doctree  explore_num.doctree
docs/_build/doctrees/other/: contact.doctree  installation.doctree  lic-gpl3.doctree
docs/_build/doctrees/predictors/: predict_hypothesis.doctree  predict_ml.doctree
docs/_build/doctrees/transformers/: transform_cat.doctree  transform_num.doctree
docs/_build/html/: .buildinfo  contact.html  datasafari.evaluator.evaluate_contingency_table.html  datasafari.evaluator.evaluate_dtype.html  datasafari.evaluator.evaluate_normality.html  datasafari.evaluator.evaluate_variance.html  datasafari.explorer.explore_cat.html  datasafari.explorer.explore_df.html  datasafari.explorer.explore_num.html  datasafari.predictor.predict_hypothesis.html  datasafari.predictor.predict_ml.html  datasafari.transformer.transform_cat.html  datasafari.transformer.transform_num.html  genindex.html  glance.html  index.html  installation.html  lic-gpl3.html  objects.inv  search.html  searchindex.js  start.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/datasafari/evaluator/: evaluate_contingency_table.html  evaluate_dtype.html  evaluate_normality.html  evaluate_variance.html
docs/_build/html/_modules/datasafari/explorer/: explore_cat.html  explore_df.html  explore_num.html
docs/_build/html/_modules/datasafari/predictor/: predict_ml.html  (+1 more)
docs/_build/html/_sources/: datasafari.evaluator.evaluate_contingency_table.rst.txt  datasafari.evaluator.evaluate_variance.rst.txt  datasafari.explorer.explore_cat.rst.txt  datasafari.explorer.explore_df.rst.txt  datasafari.transformer.transform_cat.rst.txt  index.rst.txt
docs/_build/html/_sources/evaluators/: evaluate_contingency_table.rst.txt  evaluate_dtype.rst.txt  evaluate_normality.rst.txt
docs/_build/html/_sources/other/: installation.rst.txt  lic-gpl3.rst.txt
docs/_build/html/_sources/transformers/: transform_cat.rst.txt
docs/_build/html/evaluators/: evaluate_contingency_table.html  evaluate_dtype.html  evaluate_normality.html  evaluate_variance.html
docs/_build/html/explorers/: explore_cat.html  explore_df.html  explore_num.html
docs/_build/html/other/: contact.html  installation.html  lic-gpl3.html
docs/_build/html/predictors/: predict_hypothesis.html  predict_ml.html
docs/_build/html/transformers/: transform_cat.html  transform_num.html
docs/_templates/: layout.html
docs/explorers/: explore_cat.rst
docs/other/: contact.rst  installation.rst
docs/predictors/: predict_hypothesis.rst  predict_ml.rst
docs/transformers/: transform_num.rst
other/scripts/: sync-branches.sh
other/web-assets/: robots.txt
other/web-assets/html/: button-redirect-source.html  code-block-hypothesis.html  console-field-animation.html  console-field-datasafari-overview.html  console-field-install-datasafari.html  ide-field-import-datasafari.html  meta-tags-landing.html  source-code-button.html
other/web-assets/js/: onclick-jsevent-docs.js
other/web-assets/json/: schema-script.json
scripts/: auto-backup_local.sh  sync-branches.sh
src/explorer/: explore_cat.py  explore_df.py
tests/: __init__.py  test_datasafari.py
tests/evaluator/: __init__.py  test_evaluate_contingency_table.py  test_evaluate_dtype.py  test_evaluate_normality.py  test_evaluate_variance.py
tests/explorer/: __init__.py  test_explore_cat.py  test_explore_df.py  test_explore_num.py
tests/predictor/: __init__.py  test_predict_hypothesis.py  test_predict_ml.py
tests/transformer/: __init__.py  test_transform_cat.py  test_transform_num.py
tests/utils/: __init__.py
(+2 files in other folders)
